# langchain-practice

./: .gitignore  advanced_rag.py  advanced_rag_base.py  hybrid_search_rag.py  hyde.py  langchain.py  langchain_output_parser.py  langchain_prompt.py  lcle.py  main.py  managed_agent.py  multi_query_rag.py  multi_retriever.py  output_parser.py  prompt.py  pyproject.toml  rag.py  rag_fusion.py  ragas.py  runnable_lambda.py
docs/: ragas_custom_transforms.md  ragas_knowledge_graph.md  ragas_overview.md
ragas_evaluation_pipeline/: __init__.py  ragas_evaluation_metrics.py  ragas_metric_evaluator.py  ragas_test_data_incerter.py
